--- a/wp/wp-content/themes/spa-wellness-japan/css/module/_module.scss
+++ b/wp/wp-content/themes/spa-wellness-japan/css/module/_module.scss
@@ -780,17 +780,42 @@ label {
   position: relative;
   font-size: 12px;
   color: $color-text;
-  line-height: 1.5;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.55px;
+  padding: 15px 0;
+  border-top:1px solid #BCD4EC;
+  border-bottom:1px solid #BCD4EC;
+  @include breakPoint_over-PC {
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: 0.65px;
+    padding: 20px 0;
+  }
   .global_inner {
+    @include breakPoint_over-PC {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      max-width: none;
+    }
   }
   .module_breadCrumb-01 {
+    @include breakPoint_over-PC{
+      display: inline-block;
+    }
     li {
       display: inline;
       &:not(:last-child) {
         &::after {
-          content: '＞';
+          @include font-awesome();
+          content: '\f054';
           display: inline-block;
-          margin: 0 5px;
+          margin: 0 8px;
         }
       }
       a,
@@ -799,11 +824,15 @@ label {
           display: none;
         }
       }
-      a {
-        color: $color-text;
+      a,i {
+        color: $color-link;
         &:hover {
           text-decoration: none;
         }
+      }
+      i{
+        margin-right: 8px;
+        font-weight: 400;
       }
     }
   }
