--- a/wp/wp-content/themes/spa-wellness-japan/css/global/component/_component.scss
+++ b/wp/wp-content/themes/spa-wellness-japan/css/global/component/_component.scss
@@ -165,15 +165,15 @@
     position: absolute;
     right: 0;
     bottom: 0;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    background-color: $color-primary;
-    border: 1px solid $color-primary;
+    background-color: #3C6FAC;
+    border: 1px solid #3C6FAC;
     color: $color-secondary;
-    font-size: 18px;
+    font-size: 16px;
     transition: $transition-duration;
     @include font-awesome(400);
     @include icon-zoom;
