--- a/wp/wp-content/themes/spa-wellness-japan/css/global/functions/_functions.scss
+++ b/wp/wp-content/themes/spa-wellness-japan/css/global/functions/_functions.scss
@@ -242,6 +242,17 @@ body {
   content: '\f061';
 }
 
+@mixin icon-arrow2 {
+  content: '';
+  background-image: url('data:image/svg+xml;charset=utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2218%22%20height%3D%225%22%20viewBox%3D%220%200%2018%205%22%20fill%3D%22none%22%3E%3Cpath%20d%3D%22M1%204.5H17L13%200.5%22%20stroke%3D%22%233C6FAC%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: inline-block;
+  width: 18px;
+  height: 6px;
+}
+
 @mixin icon-star {
   content: "";
   background-image: url('data:image/svg+xml;charset=utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%228%22%20height%3D%229%22%20viewBox%3D%220%200%208%209%22%20fill%3D%22none%22%3E%3Cpath%20d%3D%22M4%200.5L2.9176%203.4184L0%204.496L2.9176%205.5816L4%208.5L5.0752%205.5816L8%204.496L5.0752%203.4184L4%200.5Z%22%20fill%3D%22%23164073%22%2F%3E%3C%2Fsvg%3E');
@@ -284,6 +295,7 @@ body {
   @include wp-block-list_styles; // リスト
   @include wp-block-textLink-style; // テキストリンク
   @include wp-block-buttonLink-style; // ボタンリンク
+  @include wp-block-button-style; // ボタンリンク
   @include wp-block-table-style; // テーブル
   @include wp-block-gallery-style; // ギャラリー
   @include wp-block-accordion-style; // アコーディオン
@@ -911,7 +923,7 @@ body {
         position: absolute;
         top: 0;
         left: 0;
-        z-index: -1;
+        z-index: 0;
         border-radius: 5px;
       }
       &::after{
@@ -924,7 +936,7 @@ body {
         position: absolute;
         top: 0;
         left: 0;
-        z-index: -1;
+        z-index: 0;
         border-radius: 5px;
       }
       &:hover{
@@ -947,6 +959,7 @@ body {
       }
       .wp-block-button__link {
         position: relative;
+        z-index: 2;
         text-decoration: none;
         font-size: 16px;
         font-style: normal;
@@ -972,12 +985,6 @@ body {
         &.has-text-align-right {
           justify-content: flex-end;
         }
-        &::before {
-          content: '';
-          margin: 2px 10px 0 0;
-          transition: $transition-duration;
-          font-size: 16px;
-        }
         &::after{
           content: "";
           background-image: url('data:image/svg+xml;charset=utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2218%22%20height%3D%226%22%20viewBox%3D%220%200%2018%206%22%20fill%3D%22none%22%3E%3Cpath%20d%3D%22M1%205H17L13%201%22%20stroke%3D%22white%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E');
@@ -993,14 +1000,25 @@ body {
         }
         &:hover {
         }
-        &:not([target='_blank']):not([href$='.pdf']):not([href$='.doc']):not(
-            [href$='.docx']
-          ):not([href$='.docm']):not([href$='.xls']):not([href$='.xlsx']):not(
-            [href$='.xlsm']
-          ):not([href$='.png']):not([href$='.jpg']):not([href$='.jpeg']):not(
-            [href$='.gif']
-          ):not([href$='.webp']) {
-
+        &[target='_blank'],
+        &[href$='.pdf'],
+        &[href$='.doc'],
+        &[href$='.docx'],
+        &[href$='.docm'],
+        &[href$='.xls'],
+        &[href$='.xlsx'],
+        &[href$='.xlsm'],
+        &[href$='.png'],
+        &[href$='.jpg'],
+        &[href$='.jpeg'],
+        &[href$='.gif'],
+        &[href$='.webp']{
+          &::before {
+            content: '';
+            margin: 2px 10px 0 0;
+            transition: $transition-duration;
+            font-size: 16px;
+          }
         }
         &[target='_blank'] {
           &::before {
@@ -1042,6 +1060,247 @@ body {
     }
   }
 }
+
+// ------------------------------
+// ボタンリンク
+// ------------------------------
+@mixin wp-block-button-style {
+  ///////// デフォルト設定 /////////
+  .module_button {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 25px 20px;
+    &.--cta{
+      display: grid;
+      gap: 20px 30px;
+      @include breakPoint_over-PC {
+        grid-template-columns: repeat(3, 1fr);
+      }
+      a {
+        position: relative;
+        z-index: 2;
+        text-decoration: none;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 140%; /* 22.4px */
+        letter-spacing: 0.8px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: left;
+        border-radius: 5px;
+        background-color: transparent;
+        color: $color-secondary;
+        transition: $transition-duration;
+        background: transparent;
+        @include breakPoint_over-PC {
+
+        }
+        &::before{
+          content: "";
+          transition: $transition-duration;
+          background: radial-gradient(24% 75% at 0% 0%, #3C6FAC 0%, #4EB7CE 100%);
+          opacity: 1;
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          top: 0;
+          left: 0;
+          z-index: 0;
+          border-radius: 5px;
+        }
+        &::after{
+          content: "";
+          transition: $transition-duration;
+          background: radial-gradient(24% 75% at 0% 0%, #4EB7CE 0%, #3C6FAC 100%);
+          opacity: 1;
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          top: 0;
+          left: 0;
+          z-index: 0;
+          border-radius: 5px;
+        }
+        &:hover{
+          &::after{
+            opacity: 0;
+          }
+        }
+        &[target='_blank'],
+        &[href$='.pdf'],
+        &[href$='.doc'],
+        &[href$='.docx'],
+        &[href$='.docm'],
+        &[href$='.xls'],
+        &[href$='.xlsx'],
+        &[href$='.xlsm'],
+        &[href$='.png'],
+        &[href$='.jpg'],
+        &[href$='.jpeg'],
+        &[href$='.gif'],
+        &[href$='.webp']{
+          span{
+            &::before {
+              content: '';
+              margin: 2px 10px 0 0;
+              transition: $transition-duration;
+              font-size: 16px;
+            }
+          }
+        }
+
+        &[target='_blank'] {
+          span{
+            &::before {
+              @include font-awesome(500);
+              @include icon-blank;
+            }
+          }
+        }
+        &[href$='.pdf'] {
+          span{
+            &::before {
+              @include font-awesome(900);
+              @include icon-pdf;
+            }
+          }
+        }
+        &[href$='.doc'],
+        &[href$='.docx'],
+        &[href$='.docm'],
+        &[href$='.xls'],
+        &[href$='.xlsx'],
+        &[href$='.xlsm'],
+        &[href$='.png'],
+        &[href$='.jpg'],
+        &[href$='.jpeg'],
+        &[href$='.gif'],
+        &[href$='.webp'] {
+          span{
+            &::before {
+              @include font-awesome(900);
+              @include icon-file;
+            }
+          }
+        }
+        span{
+          width: 100%;
+          padding: 17px 50px 17px 20px;
+          display: block;
+          position: relative;
+          z-index: 2;
+          &::after{
+            content: "";
+            background-image: url('data:image/svg+xml;charset=utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2218%22%20height%3D%226%22%20viewBox%3D%220%200%2018%206%22%20fill%3D%22none%22%3E%3Cpath%20d%3D%22M1%205H17L13%201%22%20stroke%3D%22white%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E');
+            background-size: contain;
+            background-repeat: no-repeat;
+            display: inline-block;
+            width: 16px;
+            height: 5px;
+            position: absolute;
+            right: 20px;
+            top: 50%;
+            transform: translateY(-50%);
+          }
+          &:hover {
+          }
+        }
+      }
+    }
+    &.--small{
+      a{
+        position: relative;
+        display: inline-block;
+        padding: 3px 0 3px 40px;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 150%; /* 24px */
+        letter-spacing: 0.8px;
+        text-decoration: none;
+        color: $color-text;
+        &:hover {
+          span {
+            &::before {
+              background-color: $color-secondary;
+            }
+            &::after {
+              color: #0696B1;
+            }
+          }
+        }
+        &[target='_blank'] {
+          span {
+            &::after {
+              @include icon-blank;
+            }
+          }
+        }
+        &[href$='.doc'],
+        &[href$='.docx'],
+        &[href$='.docm'],
+        &[href$='.xls'],
+        &[href$='.xlsx'],
+        &[href$='.xlsm'],
+        &[href$='.png'],
+        &[href$='.jpg'],
+        &[href$='.jpeg'],
+        &[href$='.gif'],
+        &[href$='.webp'] {
+          span {
+            &::after {
+              @include icon-file;
+            }
+          }
+        }
+        &[href$='.pdf'] {
+          span {
+            &::after {
+              @include icon-pdf;
+            }
+          }
+        }
+        &:not([target='_blank']):not([href$='.pdf']):not([href$='.doc']):not([href$='.docx']):not([href$='.docm']):not([href$='.xls']):not([href$='.xlsx']):not([href$='.xlsm']):not([href$='.png']):not([href$='.jpg']):not([href$='.jpeg']):not([href$='.gif']):not([href$='.webp']) {
+          span {
+            &::after {
+              @include icon-arrow;
+            }
+          }
+        }
+        span {
+          &::before,
+          &::after {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            left: 0;
+            display: block;
+            width: 30px;
+            height: 30px;
+            content: '';
+            transition: $transition-duration;
+          }
+          &::before {
+            border: 1px solid #0696B1;
+            background-color: #0696B1;
+            border-radius: 50%;
+          }
+          &::after {
+            @include font-awesome(400);
+            color: $color-secondary;
+            font-size: 12px;
+            line-height: 30px;
+            text-align: center;
+            letter-spacing: 0;
+          }
+        }
+      }
+    }
+  }
+}
+
 
 // ------------------------------
 // テーブル
@@ -1416,63 +1675,50 @@ body {
 // ページ内リンク
 // ------------------------------
 @mixin wp-block-inPageLink {
-  .module_inPageLink-01 {
-    display: flex;
-    flex-direction: column;
-    list-style: none;
-    padding: 0;
+  .module_button.--anchor {
+    display: grid;
+    gap: 40px;
     @include breakPoint_over-PC {
-      flex-direction: row;
-      flex-wrap: wrap;
-      gap: 0 20px;
+      gap: 0 40px;
+      grid-template-columns: repeat(3, 1fr);
     }
-    .inPageLink {
+    a {
+      position: relative;
+      color: $color-text;
+      text-decoration: none;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 150%; /* 24px */
+      letter-spacing: 0.8px;
+      padding: 20px 50px 20px 20px;
+      border-bottom: 1px solid #3C6FAC;
+      display: flex;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      transition: $transition-duration;
       @include breakPoint_over-PC {
-        width: calc(33.333% - 20px * 2 / 3);
       }
-      a {
-        color: $color-text;
-        text-decoration: none;
-        font-size: 14px;
-        letter-spacing: 0.1em;
-        line-height: 1.2;
-        padding: 20px 10px;
-        border-bottom: 2px solid $color-primary;
-        display: flex;
-        align-items: center;
+      @include hover {
+        background-color: #F6F7FB
+      }
+      span {
         width: 100%;
-        height: 100%;
-        transition: $transition-duration;
-        @include breakPoint_over-PC {
+        &::after {
+          content: '';
+          display: block;
+          color: #3C6FAC;
+          position: absolute;
+          right: 20px;
+          top: 50%;
+          line-height: 1;
+          transform: translateY(-50%);
+          @include font-awesome;
+          @include icon-chevron-down;
           font-size: 16px;
-          border-color: rgba($color-primary, 0.4);
-          padding: 24px 16px;
-        }
-        @include hover {
-          border-color: $color-primary;
-          .title {
-            &::before {
-              background-color: $color-primary;
-            }
-          }
-        }
-        .title {
-          padding-right: 24px;
-          position: relative;
-          width: 100%;
-          &::after {
-            content: '';
-            display: block;
-            color: $color-primary;
-            font-size: 22px;
-            position: absolute;
-            right: 0;
-            top: 50%;
-            line-height: 1;
-            transform: translateY(-50%);
-            @include font-awesome;
-            @include icon-chevron-down;
-          }
+          font-style: normal;
+          font-weight: 400;
         }
       }
     }
@@ -1757,11 +2003,9 @@ body {
     }
   }
   .module_navigation {
-    display: flex;
-    flex-direction: column;
+    display: grid;
     @include breakPoint_over-PC {
-      flex-direction: row;
-      flex-wrap: wrap;
+      grid-template-columns: repeat(3, 1fr);
     }
     & + .module_navigation {
       margin-top: 72px;
@@ -1775,16 +2019,40 @@ body {
         text-decoration: none;
         color: $color-text;
         display: flex;
+        transition: $transition-duration;
         &::after {
           content: unset;
         }
+        &:not(:has(.image)) {
+          &:hover{
+            opacity: .7;
+          }
+        }
         @include hover {
           .content {
-            opacity: 0.7;
+
           }
           .image {
             img {
-              transform: scale(1.05);
+            }
+          }
+        }
+        &[target='_blank'],
+        &[href$='.pdf'],
+        &[href$='.doc'],
+        &[href$='.docx'],
+        &[href$='.docm'],
+        &[href$='.xls'],
+        &[href$='.xlsx'],
+        &[href$='.xlsm'] {
+          .content {
+            .title {
+              &::after {
+                background-image: none;
+                width: auto;
+                height: auto;
+                @include font-awesome();
+              }
             }
           }
         }
@@ -1792,10 +2060,31 @@ body {
           .content {
             .title {
               &::after {
-                @include font-awesome();
                 @include icon-blank;
-                margin-left: 10px;
               }
+            }
+          }
+        }
+        &[href$='.doc'],
+        &[href$='.docx'],
+        &[href$='.docm'],
+        &[href$='.xls'],
+        &[href$='.xlsx'],
+        &[href$='.xlsm'] {
+          .content {
+            .title {
+              &::after {
+                @include icon-file;
+              }
+            }
+          }
+        }
+        &[href$='.pdf'] {
+          .content {
+            .title {
+              &::after {
+                @include icon-pdf;
+              } 
             }
           }
         }
@@ -1814,14 +2103,25 @@ body {
           }
         }
         .content {
-          transition: $transition-duration;
+          transition: $transition-duration;         
           .title {
+            position: relative;
+            width: 100%;
+            font-size: 18px;
+            font-style: normal;
             font-weight: 500;
-            color: $color-primary;
-            line-height: 1.6;
-            letter-spacing: 0.1em;
-            text-decoration: underline;
-            text-decoration-thickness: 1px;
+            line-height: 150%; /* 27px */
+            letter-spacing: 0.9px;
+            padding: 20px 0;
+            border-bottom: 1px solid #3C6FAC;
+            transition: $transition-duration;
+            &::after{
+              @include icon-arrow2();
+              position: absolute;
+              right: 0;
+              top: 50%;
+              transform: translateY(-50%);
+            }
           }
           .text {
             line-height: 1.8;
@@ -1870,38 +2170,62 @@ body {
     &.--small {
       gap: 30px;
       @include breakPoint_over-PC {
-        gap: 40px;
       }
       .navigation {
         @include breakPoint_over-PC {
-          width: calc(50% - 40px / 2);
         }
         a {
-          align-items: flex-start;
-          gap: 15px;
+          flex-direction: column;
+          gap: 0;
+          text-decoration: none;
           @include breakPoint_over-PC {
-            align-items: center;
-            gap: 25px;
+          }
+          &:hover{
+            .image {
+              &::before{
+                opacity: 1;
+              }
+            }
           }
           .image {
-            border-radius: 4px;
-            width: 120px;
-            aspect-ratio: 1 / 1;
-            border: 1px solid $color-gray-border;
+            position: relative;
+            width: 100%;
+            aspect-ratio: 335 / 199;
             @include breakPoint_over-PC {
-              border: unset;
-              width: 180px;
-              aspect-ratio: 18 / 15;
+            }
+            &::before{
+              content: "Read more";
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+              font-family: Marcellus;
+              font-size: 20px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: 30px; /* 150% */
+              letter-spacing: 1px;
+              color: $color-secondary;
+              opacity: 0;
+              background: linear-gradient(0deg, rgba(60, 111, 172, 0.70) 0%, rgba(60, 111, 172, 0.70) 100%);
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              transition: $transition-duration;
             }
           }
           .content {
             .title {
-              font-size: 16px;
-              text-underline-offset: 4px;
-              margin-bottom: 10px;
+              width: 100%;
+              font-size: 18px;
+              font-style: normal;
+              font-weight: 500;
+              line-height: 150%; /* 27px */
+              letter-spacing: 0.9px;
+              padding: 20px 36px 20px 0;
+              border-bottom: 1px solid #3C6FAC;
               @include breakPoint_over-PC {
-                font-size: 20px;
-                margin-bottom: 15px;
               }
             }
             .text {
