--- a/wp/wp-content/themes/spa-wellness-japan/css/layout/_layout.scss
+++ b/wp/wp-content/themes/spa-wellness-japan/css/layout/_layout.scss
@@ -877,6 +877,7 @@
     align-items: center;
     justify-content: center;
     color: #3C6FAC;
+    text-transform: capitalize;
     @include breakPoint_over-PC{
       font-size: 20px;
       font-style: normal;
